<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RentRoom</string>
    <string name="action_my_page">Quản lý trang</string>
    <string name="action_favorite">Bài lưu trữ</string>
    <string name="action_sign_out">Thoát</string>
    <string name="action_change_pass">Đổi mật khẩu</string>
    <string name="text_description_all">Rent room</string>
    <string name="error">Lỗi</string>
    <string name="sign_in">ĐĂNG NHẬp</string>
    <string name="username">Tên đăng nhập</string>
    <string name="pass">Mật khẩu</string>
    <string name="remember">Đăng nhập lần sau?</string>
    <string name="error_login">Tên đăng nhập hoặc mật khẩu không đúng</string>
    <string name="signin_title">Đăng nhập</string>
    <string name="forgot_pass"><u>Forgotten your password?</u></string>
    <string name="register_yet">Chưa đăng ký,</string>
    <string name="or">Hoặc</string>
    <string name="username_pass_required">Tên đăng nhập và mật khẩu không được trống</string>
    <string name="username_required">Tên đăng nhập không được trống</string>
    <string name="pass_required">Mật khẩu không được trống</string>
    <string name="username_sign_up">Tên đăng nhập</string>
    <string name="pass_sign_up">Mật khẩu</string>
    <string name="confirm_pass_sign_up">Xác nhận mật khẩu</string>
    <string name="email_sign_up">Email</string>
    <string name="confirm_email_sign_up">Xác nhận Email</string>
    <string name="sign_up_title">Đăng ký</string>
    <string name="invalid_email">Email không hợp lệ</string>
    <string name="invalid_confirm_email">Email xác thực không đúng</string>
    <string name="invalid_pass">Mật khẩu không hợp lệ</string>
    <string name="invalid_new_pass">Mật khẩu mới không hợp lệ</string>
    <string name="invalid_confirm_pass">Mật khẩu xác nhận không đúng</string>
    <string name="invalid_old_pass">Mật khẩu cũ không đúng</string>
    <string name="invalid_username">Tên đăng nhập không hợp lệ</string>
    <string name="invalid_lenght_username">Tên đăng nhập tối thiểu phải chứa 6 ký tự</string>
    <string name="invalid_lenght_pass">Mật khẩu tối thiểu phải chứa 6 ký tự</string>
    <string name="sign_up_not_success">Đăng ký tài khoản không thành công. Vui lòng thử lại.</string>
    <string name="tip_search">Nhập từ khóa để tìm kiếm</string>
    <string name="city_title">TP/Tỉnh:</string>
    <string name="district_title">Quận/Huyện:</string>

    <string-array name="equal_title">
        <item>&gt;=</item>
        <item>&lt;=</item>
        <item>=</item>
    </string-array>

    <string name="cost_title">Giá:</string>
    <string name="cost_prompt">Chọn giá phòng</string>

    <string-array name="cost_arrays">
        <item>Chon gia</item>
        <item>500k</item>
        <item>1tr</item>
        <item>1.5tr</item>
        <item>2tr</item>
        <item>2.5tr</item>
        <item>3tr</item>
        <item>3.5tr</item>
        <item>4tr</item>
        <item>4.5tr</item>
        <item>5tr</item>
        <item>5.5tr</item>
        <item>6tr</item>
        <item>6.5tr</item>
        <item>7tr</item>
        <item>7.5tr</item>
        <item>8tr</item>
        <item>8.5tr</item>
        <item>9tr</item>
        <item>9.5tr</item>
        <item>10tr</item>
    </string-array>

    <string name="area_title">DT:</string>
    <string name="area_prompt">Chọn giá phòng</string>

    <string-array name="area_arrays">
        <item>Chon dien tich</item>
        <item>10m2</item>
        <item>15m2</item>
        <item>20m2</item>
        <item>25m2</item>
        <item>30m2</item>
        <item>35m2</item>
        <item>40m2</item>
        <item>45m2</item>
        <item>50m2</item>
        <item>55m2</item>
        <item>60m2</item>
        <item>65m2</item>
        <item>70m2</item>
        <item>75m2</item>
        <item>80m2</item>
        <item>85m2</item>
        <item>9m2</item>
        <item>95m2</item>
        <item>100m2</item>
    </string-array>

    <string name="search_title">Tìm ngay</string>
    <string name="add_new_room_title">Thêm bài đăng</string>
    <string name="name_title">Họ tên</string>
    <string name="phone_title">Số điện thoại</string>
    <string name="address_title">Địa chỉ</string>
    <string name="area_title_add_new">Diện tích (m2)</string>
    <string name="cost_title_add_new">Giá phòng</string>
    <string name="discription_title">Mô tả</string>
    <string name="post_title">Đăng bài</string>
    <string name="up_photo_title">Chọn ảnh upload (&lt;2MB)</string>
    <string name="from_to">đến</string>
    <string name="num_room">Số lượng phòng trống</string>
    <string name="empty_full_name">Chưa nhập họ tên</string>
    <string name="empty_phone_number">Chưa nhập Số điện thoại</string>
    <string name="empty_address">Chưa nhập địa chỉ nhà</string>
    <string name="empty_area">Chưa nhập diện tích phòng</string>
    <string name="empty_cost">Chưa nhập giá phòng</string>
    <string name="empty_disctiption">Chưa nhập mô tả phòng</string>
    <string name="incorrect_cost">Giá phòng không hợp lệ</string>
    <string name="incorrect_area">Diện tích không hợp lệ</string>
    <string name="empty_area_min">Diện tích nhập vào chưa đầy đủ</string>
    <string name="empty_num_room">Chưa nhập số lượng phòng trống</string>
    <string name="post_error">Bạn không thể đăng bài ngay lúc này. Vui lòng thử lại sau!</string>
    <string name="room_description_adapter">Mô tả phòng</string>
    <string name="cost_adapter">Giá</string>
    <string name="address_adapter">Địa chỉ</string>
    <string name="hint_cost">2,500,000</string>
    <string name="hint_area">20(m2)</string>
    <string name="description_title_detail">MÔ TẢ</string>
    <string name="cost_title_detail">GIÁ:</string>
    <string name="area_title_detail">DIỆN TÍCH:</string>
    <string name="num_room_title_detail">SỐ LƯỢNG PHÒNG TRỐNG:</string>
    <string name="image_title_detail">HÌNH ẢNH:</string>
    <string name="contact_title_detail">LIÊN HỆ:</string>
    <string name="phone_title_detail">Số điện thoại:</string>
    <string name="address_title_detail">Địa chỉ:</string>
    <string name="name_title_detail">Tên liên hệ:</string>
    <string name="option_search_title">TÙY CHỌN TÌM KIẾM</string>
    <string name="comment_title">NHẬN XÉT:</string>
    <string name="address_search"><u>D/c: </u> {0}</string>
    
    <string name="post_comment_title">Gởi</string>
    <string name="post_comment_hind">Nhập lời bình</string>
    <string name="notice_title">Thông báo</string>
    <string name="sign_in_notice">Vui lòng đăng nhập để thực hiện tính năng này</string>
    <string name="comment_content_notice">Vui lòng nhập nội dung</string>
    
    <string name="temp_text">N/A</string>
    <string name="detail_header_title">Chi tiết</string>
    <string name="my_page_header_title">Quản lý trang</string>
    <string name="add_new_header_title">Thêm bài viết</string>
    
    <string name="option_title">Tùy chọn</string>
    <string name="delete_option">Xóa bài viết</string>
    <string name="edit_option">Sửa bài viết</string>
    <string name="edit_button_text">Cập nhật</string>
    <string name="delete_fail_notice">Không thể xóa bài viết ngay lúc này. Vui lòng thử lại sau</string>
    
    <string name="old_pass_hint">Mật khẩu cũ</string>
    <string name="new_pass_hint">Mật khẩu mới</string>
    <string name="new_pass_confirm_hint">Xác nhận mật khẩu mới</string>
    <string name="change_pass_title">Đổi mật khẩu</string>
    <string name="btn_change_pass_title">Xác nhận</string>
    <string name="request_success">Yêu cầu của bạn đã thành công</string>
    <string name="request_fail">Đã có lỗi xảy ra trong quá trình thực hiện. Vui lòng thử lại sau</string>
    
    <string name="max_file_upload_notice">Bạn chỉ được đăng tối đa 3 hình</string>
    <string name="choose_img_err">Đã có lỗi xảy ra. Vui lòng thử lại hoặc chọn hình khác</string>

    <string name="data_error">Không thể lấy dữ liệu từ sever. Vui lòng kiểm tra kết nối mạng và thử lại.</string>
</resources>