<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.coolsx.rentroom.MainRentRoom" >

    <item
        android:id="@+id/action_my_page"
        android:orderInCategory="100"
        android:title="@string/action_my_page"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="100"
        android:title="@string/action_favorite"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_change_pass"
        android:orderInCategory="100"
        android:title="@string/action_change_pass"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="100"
        android:title="@string/action_sign_out"
        app:showAsAction="never"/>

</menu>