<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color" >
    <include
        layout="@layout/header_layout" />

    <EditText
        android:id="@+id/edit_username_sign_up"
        android:layout_width="match_parent"
        android:layout_height="@dimen/min_height_button"
        android:layout_marginEnd="@dimen/pad_right_ed_sign_in"
        android:layout_marginLeft="@dimen/pad_left_header"
        android:layout_marginRight="@dimen/pad_left_header"
        android:layout_marginTop="@dimen/pad_top_sign_up"
        android:background="@drawable/custom_border_normal"
        android:hint="@string/username_sign_up"
        android:singleLine="true"
        android:textColor="@color/black" />
	<EditText
	    android:id="@+id/edit_pass_sign_up"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/min_height_button"
	    android:layout_marginEnd="@dimen/pad_right_ed_sign_in"
	    android:layout_marginLeft="@dimen/pad_left_header"
	    android:layout_marginRight="@dimen/pad_left_header"
	    android:layout_marginTop="@dimen/pad_top"
	    android:background="@drawable/custom_border_normal"
	    android:hint="@string/pass_sign_up"
	    android:inputType="textPassword"
	    android:singleLine="true"
	    android:textColor="@color/black" />
	<EditText
	    android:id="@+id/edit_pass_confirm_sign_up"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/min_height_button"
	    android:layout_marginEnd="@dimen/pad_right_ed_sign_in"
	    android:layout_marginLeft="@dimen/pad_left_header"
	    android:layout_marginRight="@dimen/pad_left_header"
	    android:layout_marginTop="@dimen/pad_top"
	    android:background="@drawable/custom_border_normal"
	    android:hint="@string/confirm_pass_sign_up"
	    android:inputType="textPassword"
	    android:singleLine="true"
	    android:textColor="@color/black" />
    <EditText
        android:id="@+id/edit_email_sign_up"
        android:layout_width="match_parent"
        android:layout_height="@dimen/min_height_button"
        android:layout_marginEnd="@dimen/pad_right_ed_sign_in"
        android:layout_marginLeft="@dimen/pad_left_header"
        android:layout_marginRight="@dimen/pad_left_header"
        android:layout_marginTop="@dimen/pad_top"
        android:background="@drawable/custom_border_normal"
        android:hint="@string/email_sign_up"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:textColor="@color/black" />
   <EditText
        android:id="@+id/edit_confirm_email_sign_up"
        android:layout_width="match_parent"
        android:layout_height="@dimen/min_height_button"
        android:layout_marginEnd="@dimen/pad_right_ed_sign_in"
        android:layout_marginLeft="@dimen/pad_left_header"
        android:layout_marginRight="@dimen/pad_left_header"
        android:layout_marginTop="@dimen/pad_top"
        android:background="@drawable/custom_border_normal"
        android:hint="@string/confirm_email_sign_up"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColor="@color/black" />
   	<TextView
        android:text="@string/error_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_error_sign_up"
        android:layout_marginTop="@dimen/pad_left_right"
        android:gravity="center"
        android:textColor="@color/red"
        android:visibility="gone" />
    <Button
        android:text="@string/sign_up_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sign_up"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/pad_top_btn_signin"
        android:minWidth="@dimen/min_height_button"
        android:background="@drawable/custom_border_select"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:minHeight="@dimen/min_height_button"
        android:layout_marginLeft="@dimen/pad_left_header"
        android:layout_marginRight="@dimen/pad_left_header"
        android:textSize="@dimen/text_button_size" />   

</LinearLayout>
