<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"    
    android:background="@color/bg_color"
    android:orientation="vertical" >
    <include
        layout="@layout/header_layout" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/pad_bottom"
        android:layout_marginLeft="@dimen/pad_left_header"
        android:layout_marginRight="@dimen/pad_left_header"
        android:layout_marginTop="@dimen/pad_top_sign_in"
        android:orientation="vertical" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/min_height_button"
            android:gravity="center_vertical"
            android:background="@drawable/custom_border_normal"
            android:layout_gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/text_description_all"
                android:layout_marginLeft="@dimen/pad_left_right"
                android:layout_marginRight="@dimen/pad_left_right"
                android:src="@drawable/ic_user" />

            <EditText
                android:id="@+id/edit_username_sign_in"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/pad_top_bottom_ed_sign_in"
                android:layout_marginEnd="@dimen/pad_right_ed_sign_in"
                android:layout_marginRight="@dimen/pad_right_ed_sign_in"
                android:layout_marginTop="@dimen/pad_top_bottom_ed_sign_in"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/username"
                android:singleLine="true"
                android:textColor="@color/black" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/min_height_button"
            android:gravity="center_vertical"
            android:background="@drawable/custom_border_normal"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/pad_top">
            <ImageView
                android:src="@drawable/ic_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/text_description_all"
                android:layout_marginLeft="@dimen/pad_left_right"
                android:layout_marginRight="@dimen/pad_left_right" />

            <EditText
                android:id="@+id/edit_pass_sign_in"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/pad_top_bottom_ed_sign_in"
                android:layout_marginEnd="@dimen/pad_right_ed_sign_in"
                android:layout_marginLeft="@dimen/pad_left_right"
                android:layout_marginRight="@dimen/pad_right_ed_sign_in"
                android:layout_marginStart="@dimen/pad_left_right"
                android:layout_marginTop="@dimen/pad_top_bottom_ed_sign_in"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true"
                android:textColor="@color/black" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/checkbox_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/pad_top"
            android:text="@string/remember"
            android:textColor="@color/green_sky_landing"
            android:textSize="@dimen/text_size" />

	    <TextView
	        android:text="@string/error_login"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/tv_error_login"
	        android:layout_marginTop="@dimen/pad_left_right"
	        android:gravity="center"
	        android:textColor="@color/red"
	        android:visibility="gone" />
	
	    <Button
	        android:id="@+id/btn_sign_in"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="@dimen/pad_top_btn_signin"
	        android:background="@drawable/custom_border_select"
	        android:minHeight="@dimen/min_height_button"
	        android:minWidth="@dimen/min_height_button"
	        android:text="@string/signin_title"
	        android:textColor="@color/white"
	        android:textSize="@dimen/text_button_size"/>
	
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="@dimen/pad_top"
		    android:gravity="center"
		    android:orientation="horizontal" >
	
	        <TextView
	            android:text="@string/register_yet"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:id="@+id/textView1"
	            android:textSize="@dimen/text_size"
	            android:textColor="@color/black"/>
	
	        <TextView
	            android:id="@+id/tv_registry"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="@dimen/pad_left_right"
	            android:layout_marginStart="0dp"
	            android:text="@string/sign_up_title"
	            android:textColor="@color/custom_color_tv_forgot_pass"
	            android:textSize="@dimen/text_size" />
	
	    </LinearLayout>
	
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/pad_top"
	        android:gravity="center"
	        android:text="@string/or"
	        android:textColor="@color/black"
	        android:textSize="@dimen/text_size" />
	    
	    <TextView
	        android:id="@+id/tv_forgotpass"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="@dimen/pad_top"
	        android:text="@string/forgot_pass"
	        android:textColor="@color/custom_color_tv_forgot_pass"
	        android:textSize="@dimen/text_size" /> 
	</LinearLayout>        
</LinearLayout>
