<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color"
    tools:context="com.coolsx.rentroom.MainRentRoom" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/llSignIn_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/pad_left_header"
        android:layout_marginRight="@dimen/pad_left_header"
        android:layout_marginTop="@dimen/pad_top"
        android:gravity="end" >

        <TextView
            android:id="@+id/tvSignInHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_title"
            android:textColor="@color/custom_color_tv_forgot_pass"
            android:textSize="@dimen/text_button_size" />

        <Button
            android:id="@+id/btnRegistryHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/pad_left_header"
            android:layout_marginStart="@dimen/pad_left_header"
            android:background="@drawable/custom_border_select"
            android:text="@string/sign_up_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_button_size" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginEnd="@dimen/pad_right_ed_sign_in"
        android:layout_marginLeft="@dimen/pad_left_header"
        android:layout_marginRight="@dimen/pad_left_header"
        android:layout_marginTop="@dimen/pad_top"
        android:gravity="center_horizontal"
        android:text="@string/option_search_title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/pad_left_header"
        android:layout_marginLeft="@dimen/pad_left_header"
        android:layout_marginRight="@dimen/pad_left_header"
        android:layout_marginStart="@dimen/pad_left_header"
        android:layout_marginTop="@dimen/pad_top"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/pad_left_right"
            android:layout_marginRight="@dimen/pad_left_right"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_title"
                android:textColor="@color/custom_color_tv_forgot_pass"
                android:textSize="@dimen/text_size" />

            <Spinner
                android:id="@+id/spinCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/pad_left_right"
            android:layout_marginRight="@dimen/pad_left_right"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/district_title"
                android:textColor="@color/custom_color_tv_forgot_pass"
                android:textSize="@dimen/text_size" />

            <Spinner
                android:id="@+id/spinDistrict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/pad_left_header"
        android:layout_marginLeft="@dimen/pad_left_header"
        android:layout_marginRight="@dimen/pad_left_header"
        android:layout_marginStart="@dimen/pad_left_header"
        android:layout_marginTop="@dimen/pad_top"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/pad_left_right"
            android:layout_marginRight="@dimen/pad_left_right"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cost_title"
                android:textColor="@color/custom_color_tv_forgot_pass"
                android:textSize="@dimen/text_size" />

            <Spinner
                android:id="@+id/spinEqualCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/equal_title" />

            <EditText
                android:id="@+id/edit_cost_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/pad_top_ed_add_new_post"
                android:layout_weight="1"
                android:textSize="@dimen/text_size"
                android:background="@drawable/custom_border_normal"
                android:hint="@string/hint_cost"
                android:inputType="number"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/pad_left_right"
            android:layout_marginRight="@dimen/pad_left_right"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area_title"
                android:textColor="@color/custom_color_tv_forgot_pass"
                android:textSize="@dimen/text_size" />

            <Spinner
                android:id="@+id/spinEqualArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/equal_title" />

            <EditText
                android:id="@+id/edit_area_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/pad_top_ed_add_new_post"
                android:layout_weight="1"
                android:textSize="@dimen/text_size"
                android:background="@drawable/custom_border_normal"
                android:hint="@string/hint_area"
                android:inputType="number"
                android:maxLength="4"
                android:singleLine="true"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="@dimen/pad_left_header"
        android:layout_marginRight="@dimen/pad_left_header"
        android:layout_marginTop="@dimen/pad_top_btn_signin"
        android:background="@drawable/custom_border_select"
        android:minHeight="@dimen/min_height_button"
        android:minWidth="@dimen/min_height_button"
        android:text="@string/search_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_button_size"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/lv_search_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/pad_top_lv_result"
        android:layout_weight="1" >
    </ListView>
</LinearLayout>

<include layout="@layout/indicator_progresbar_layout" />

</FrameLayout>