<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_description_adapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/pad_left_header"
        android:layout_marginStart="@dimen/pad_left_header"
        android:layout_marginTop="@dimen/pad_top_bottom"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/room_description_adapter"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/tv_cost_adapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/pad_left_header"
        android:layout_marginStart="@dimen/pad_left_header"
        android:layout_marginTop="@dimen/pad_top_bottom"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/cost_adapter"
        android:textColor="@color/custom_color_tv_forgot_pass"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_address_adapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/pad_top_bottom"
        android:layout_marginEnd="@dimen/pad_left_header"
        android:layout_marginStart="@dimen/pad_left_header"
        android:layout_marginTop="@dimen/pad_top_bottom"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/address_adapter"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        android:textStyle="italic" />

</LinearLayout>